--- a/en-builder.html
+++ b/en-builder.html
@@ -7,10 +7,10 @@
 <html>
 	<style>
 		#main > header {
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/ourcompany.jpg") !important;
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/ourcompany.jpg") !important;
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/ourcompany.jpg") !important;
-			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/ourcompany.jpg") !important;
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerBuilder.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerBuilder.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerBuilder.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerBuilder.jpg") !important;
 		}
 
 		@media screen and (max-width: 480px) {
@@ -20,6 +20,11 @@
 	
 			.displaySmall {
 				display: block !important;
+			}
+
+			
+			#disappear {
+				display: none;
 			}
 		}
 	</style>
@@ -71,12 +76,27 @@
 							<h2>Builder</h2>
 						</header>
 						<section class="wrapper style5" style="padding: 2em 0 3em 0;">
-							<div class="inner">
+							<div class="inner" style="padding: 0 2em 0 2em;">
 								<p>The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
 								<p>M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
-								<a href="http://www.m2construction.ca/" style="width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">www.m2construction.ca/</a>
+								<a href="http://www.m2construction.ca/" style="width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">m2construction.ca</a>
 							</div>
+
+							<section id="disappear" class="wrapper style3 special">
+								<div class="inner">
+									<ul class="features">
+										<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
+											<center><img style="max-height: 250px; width: auto; border-top-left-radius: 5px; border-bottom-left-radius: 5px;" src="images/BUILDER MAN LAPTOP.jpg" alt="" /></center>
+										</li>
+										<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-left: 5px;">
+											<center><img style="max-height: 250px; width: auto; border-top-right-radius: 5px; border-bottom-right-radius: 5px;" src="images/BUILDER CAPPUCINO.jpg" alt="" /></center>
+										</li>
+									</ul>
+								</div>
+							</section>
+
 						</section>
+
 						<section id="one" class="wrapper style1 special" style="padding: 1em 3em 0.5em 3em; background-color: #2e3842;">
 							<div class="inner">
 								<header>
