--- a/en-contact.html
+++ b/en-contact.html
@@ -21,6 +21,11 @@
 			.displaySmall {
 				display: block !important;
 			}
+
+			
+			#disappear {
+				display: none;
+			}
 		}
 	</style>
 	<head>
@@ -118,6 +123,19 @@
 								</section>
 
 								<!-- <div id="googleMap" style="height:400px"></div> -->
+
+								<section id="disappear" class="wrapper style3 special">
+									<div class="inner">
+										<ul class="features">
+											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
+												<center><img style="max-height: 250px; width: auto; border-top-left-radius: 5px; border-bottom-left-radius: 5px;" src="images/CONTACT COUPLE HANDS BABY SHOES.jpg" alt="" /></center>
+											</li>
+											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-left: 5px;">
+												<center><img style="max-height: 250px; width: auto; border-top-right-radius: 5px; border-bottom-right-radius: 5px;" src="images/CONTACT GIRLS STUDYING.jpg" alt="" /></center>
+											</li>
+										</ul>
+									</div>
+								</section>
 
 							</div>
 						</section>
