--- a/en-project.html
+++ b/en-project.html
@@ -7,10 +7,10 @@
 <html>
 	<style>
 		#main > header {
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2cropped.jpg") !important;
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2cropped.jpg") !important;
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2cropped.jpg") !important;
-			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2cropped.jpg") !important;
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerProject.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerProject.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerProject.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerProject.jpg") !important;
 		}
 
 		@media screen and (max-width: 480px) {
@@ -20,6 +20,10 @@
 	
 			.displaySmall {
 				display: block !important;
+			}
+
+			#disappear {
+				display: none;
 			}
 		}
 	</style>
@@ -76,6 +80,7 @@
 
 								<div class="table-wrapper">
 									<center>
+										
 									<table style="max-width: 600px;">
 										<tbody>
 											<tr>
@@ -127,12 +132,23 @@
 									</table>
 								</center>
 								</div>
-
 								<center><p>**conditions may apply**</p></center>
-								<p></p>
-								<p></p>
+
 								<center><h4 style="margin-top: 50px">Download complete list of features</h4></center>
 								<center><a href="other/SPECIFICATIONS.docx" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Project Specifications</a><center>
+
+								<section id="disappear" class="wrapper style3 special">
+									<div class="inner">
+										<ul class="features">
+											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
+												<center><img style="max-height: 250px; width: auto; border-top-left-radius: 5px; border-bottom-left-radius: 5px;" src="images/PROJECT BAKERY.jpg" alt="" /></center>
+											</li>
+											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-left: 5px;">
+												<center><img style="max-height: 250px; width: auto; border-top-right-radius: 5px; border-bottom-right-radius: 5px;" src="images/PROJECT DINNER CELEBRATION.jpg" alt="" /></center>
+											</li>
+										</ul>
+									</div>
+
 							</div>
 						</section>
 					</article>
