--- a/floor1.html
+++ b/floor1.html
@@ -68,7 +68,7 @@
 
             <div class="displayBig">
                 <center>
-                    <img class="map" style="width: 835px; height: 645px;" src="images/level1.png" usemap="#image-map">
+                    <img class="map" style="width: 835px; height: 645px;" src="plans/level1.png" usemap="#image-map">
 
                     <map name="image-map">
                         <area target="_self" alt="Unit 101" title="Unit 101" href="unit101.html" coords="104,266,105,443,327,442,327,362,405,361,404,266" shape="poly">
