--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 				display: block !important;
 			}
 
+		}
+
+		@media screen and (max-width: 380px) {
 			.imageSmall {
-				width: 480px !important;
+				width: 385px !important;
 			}
 		}
 
@@ -99,7 +102,7 @@
 					<div class="displayBig2">
 						<section class="spotlight" style="background-color: #4591c5">
 							<div class="image">
-								<img class="imageDisappear" src="images/banner.jpg" alt="" />
+								<img class="imageDisappear" src="images/HOME CHILDREN JUMPING.jpg" alt="" />
 							</div>
 							<div class="content">
 								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
@@ -108,7 +111,7 @@
 
 						<section class="spotlight" style="background-color: #87c45d;">
 							<div class="image">
-								<img src="images/banner2.jpg" alt="" />
+								<img src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" />
 							</div>
 							<div class="content">
 								<h4 style="font-weight: 600;">Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
@@ -118,23 +121,21 @@
 					<div>
 
 					<section id="three" class="wrapper style3 special">
-							<div class="inner">
-								<ul class="features">
-									<li style="overflow:hidden; max-height: 250px;">
-										<img src="images/HOME CHILDREN JUMPING.jpg" alt="" />
-									</li>
-									<li style="overflow:hidden; max-height: 250px; ">
-										<img style="" src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" />
-									</li>
-									<!-- <li style="overflow:hidden; max-height: 250px;">
-										<img src="images/bannerContact.jpg" alt="" />
-									</li>
-									<li style="overflow:hidden; max-height: 250px;">
-										<img src="images/plansRoof.jpg" alt="" />
-									</li> -->
-								</ul>
-							</div>
-						</section>
+						<div class="inner">
+							<ul class="features">
+								<li style="overflow:hidden; max-height: 250px;">
+									<a href="images/banner.jpg">
+										<center><img style="max-height: 250px; width: auto" src="images/banner.jpg" alt="" /></center>
+									</a>
+								</li>
+								<li style="overflow:hidden; max-height: 250px; ">
+									<a href="images/banner2.jpg">
+										<center><img style="max-height: 250px; width: auto" src="images/banner2.jpg" alt="" /></center>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</section>
 
 					<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
@@ -149,23 +150,30 @@
 				
 				
 				<!-- Body when screen is small -->
-				<div class="displaySmall2" style="display: none;">
-					<section style="background-color: #6fbee6">
+				<div class="displaySmall2" style="display: none; overflow-x: hidden;">
+					<section style="background-color:  #4591c5">
 						<div style="padding: 40px 10px 40px 10px">
 							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+						</div>
+						<div style="background-color: #87c45d;">
+							<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/HOME CHILDREN JUMPING.jpg" alt="" /></center>
 						</div>
 					</section>
 
 					<section style="background-color: #87c45d;">
-						<div>
-							<img class="imageSmall" style="width: 836px; height: auto;" src="images/banner2.jpg" alt="" />
-						</div>
 						<div style="padding: 40px 10px 40px 10px">
 							<h4 style="font-weight: 600;">Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
 							<a href="en-project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
 						</div>
+						<div style="background-color:#2e3842">
+							<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" /></center>
+						</div>
 					</section>
 				<div>
+
+				<div style="background-color:#2e3842">
+					<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/banner2.jpg" alt="" /></center>
+				</div>
 
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 					<ul class="copyright">
