--- a/unit104.html
+++ b/unit104.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html> 
 <html>
 
+<style>
+    @media screen and (max-width: 480px) {
+    .displayBig {
+        display: none;
+    }
+
+    .displaySmall {
+        display: block !important;
+    }
+}
+</style>
+
 <head>
     <title>Condos Cité Avenir Laval</title>
     <meta charset="utf-8" />
@@ -42,8 +54,8 @@
     <article id="main">
         <header style="background-attachment: scroll;"></header>
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
-            <a href="images/101-1.png">
-            <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="images/104-1.png">
+            <a href="plans/104-1.png">
+            <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="plans/104-1.png">
             </a>
         </section>
     </article>
