fixed smallLogo margin at screen 1280px

--- a/en-plans.html
+++ b/en-plans.html
@@ -22,6 +22,12 @@
             display: none;
         }
     }
+
+    @media screen and (min-width: 1280px) {
+        .logoSmall {
+            margin-top: 6px !important;
+        }
+    }
 </style>
 
 <head>
@@ -47,7 +53,7 @@
 <div id="page-wrapper">
 
     <header id="header">
-        <img style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
+        <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
         <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
