--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 				display: block !important;
 			}
 		}
+
+			@media screen and (min-width: 1280px) {
+				.logoSmall {
+					margin-top: 6px !important;
+				}
+			}
 	</style>
 
 	<head>
@@ -61,7 +67,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
+						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
 						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
@@ -125,12 +131,12 @@
 							<ul class="features">
 								<li style="overflow:hidden; max-height: 250px;">
 									<a href="images/banner.jpg">
-										<center><img style="max-height: 250px; width: auto" src="images/banner.jpg" alt="" /></center>
+										<center><img style="max-height: 250px; width: auto; border-radius: 5px; border: 5px solid#e0e0e0;" src="images/banner.jpg" alt="" /></center>
 									</a>
 								</li>
 								<li style="overflow:hidden; max-height: 250px; ">
 									<a href="images/banner2.jpg">
-										<center><img style="max-height: 250px; width: auto" src="images/banner2.jpg" alt="" /></center>
+										<center><img style="max-height: 250px; width: auto; border-radius: 5px; border: 5px solid #e0e0e0;" src="images/banner2.jpg" alt="" /></center>
 									</a>
 								</li>
 							</ul>
