--- a/floor1.html
+++ b/floor1.html
@@ -11,6 +11,12 @@
             display: block !important;
         }
     }
+
+    @media screen and (min-width: 1280px) {
+        .logoSmall {
+            margin-top: 6px !important;
+        }
+    }
 </style>
 <head>
     <title>Condos Cité Avenir Laval</title>
@@ -35,7 +41,7 @@
 <div id="page-wrapper">
 
     <header id="header">
-        <img style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
+        <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
         <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
