--- a/en-contact.html
+++ b/en-contact.html
@@ -130,7 +130,7 @@
 
 								<!-- <div id="googleMap" style="height:400px"></div> -->
 
-								<section id="disappear" class="wrapper style3 special">
+								<!-- <section id="disappear" class="wrapper style3 special">
 									<div class="inner">
 										<ul class="features">
 											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
@@ -141,7 +141,7 @@
 											</li>
 										</ul>
 									</div>
-								</section>
+								</section> -->
 
 							</div>
 						</section>
