--- a/en-project.html
+++ b/en-project.html
@@ -87,6 +87,9 @@
 								<div class="table-wrapper">
 									<center>
 										
+									<!-- Charactertics du project -->
+									<u><h2 style="padding-bottom: 15px;">Project Features</h2></u>
+
 									<table style="max-width: 600px;">
 										<tbody>
 											<tr>
@@ -141,10 +144,19 @@
 								<center><p>**conditions may apply**</p></center>
 
 								<center><h4 style="margin-top: 50px">Download complete list of features</h4></center>
-								<center><a href="other/SPECIFICATIONS.docx" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Project Specifications</a><center>
+								<center><a href="other/SPECIFICATIONS.pdf" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Project Specifications</a><center>
+
+								<hr>
+
+								<!-- Vue en exterior -->
+								<u><h2 style="padding-bottom: 15px;">Exterior Plan View</h2></u>
+
+								<a href="images/plansLandscape.png">
+									<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/plansLandscape.png">
+								</a>
 
 								<section id="disappear" class="wrapper style3 special">
-									<div class="inner">
+									<!-- <div class="inner">
 										<ul class="features">
 											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
 												<center><img style="max-height: 250px; width: auto; border-top-left-radius: 5px; border-bottom-left-radius: 5px;" src="images/PROJECT BAKERY.jpg" alt="" /></center>
@@ -153,10 +165,10 @@
 												<center><img style="max-height: 250px; width: auto; border-top-right-radius: 5px; border-bottom-right-radius: 5px;" src="images/PROJECT DINNER CELEBRATION.jpg" alt="" /></center>
 											</li>
 										</ul>
-									</div>
+									</div> -->
 
-							</div>
-						</section>
+								</div>
+							</section>
 					</article>
 
 				<!-- Footer -->
