--- a/en-builder.html
+++ b/en-builder.html
@@ -88,7 +88,7 @@
 								<a href="http://www.m2construction.ca/" style="width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">m2construction.ca</a>
 							</div>
 
-							<section id="disappear" class="wrapper style3 special">
+							<!-- <section id="disappear" class="wrapper style3 special">
 								<div class="inner">
 									<ul class="features">
 										<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
@@ -99,7 +99,7 @@
 										</li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 						</section>
 
