--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -41,6 +41,16 @@
 				margin-top: 6px !important;
 			}
 		}
+
+		@media screen and (max-width: 837px) {
+			.displayBig2 {
+				display: none;
+			}
+	
+			.displaySmall2 {
+				display: block !important;
+			}
+		}
 	</style>
 	<head>
 		<title>Condos Cité Avenir Laval</title>
@@ -89,11 +99,45 @@
 						<header style="background-attachment: scroll;">
 							<h2>Neighborhood</h2>
 						</header>
+
+						<section>
+							<div class="displayBig2">
+								<section class="spotlight" style="background-color: #6fbee6">
+									<div class="image">
+										<img src="images/NEIGHBORHOOD salle andre mathieu.jpg" alt="" />
+									</div>
+									<div class="content">
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+									</div>
+								</section>
+		
+								<section class="spotlight" style="background-color: #87c45d;">
+									<div class="image">
+										<img src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
+									</div>
+									<div class="content">
+										<h4 style="font-weight: 600;">Enjoy urban living with the tranquility of your own residential neighborhood.</h4>
+									</div>
+								</section>
+	
+								<section class="spotlight" style="background-color: #4591c5">
+									<div class="image">
+										<img src="images/NEIGHBORDHOOD metro.jpg" alt="" />
+									</div>
+									<div class="content">
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</h4>
+									</div>
+								</section>
+							<div>
+
+						</section>
+
 						<section class="wrapper style5">
+
 							<div class="inner">
-								<p>Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval. Enjoy urban living with the tranquility of your own residential neighborhood.</p>
-								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</p>
-								
+
+								<u><h2 style="padding-bottom: 15px;">Area map</h2></u>
+
 								<a href="images/planDeQuartier.png">
 									<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/planDeQuartier.png">
 								</a>
@@ -127,27 +171,9 @@
 									</table>
 								</div>
 
-								<section id="disappear" class="wrapper style3 special">
-									<div class="inner">
-										<ul class="features">
-											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
-												<center><img style="max-height: 250px; width: auto; border-top-left-radius: 5px; border-bottom-left-radius: 5px;" src="images/NEIGHBORHOOD centropolis.jpg" alt="" /></center>
-											</li>
-											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-left: 5px;">
-												<center><img style="max-height: 250px; width: auto; border-top-right-radius: 5px; border-bottom-right-radius: 5px;" src="images/NEIGHBORHOOD montmorency.jpg" alt="" /></center>
-											</li>
-										</ul>
-										<ul class="features">
-											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-right: 5px;">
-												<center><img style="max-height: 250px; width: auto; border-top-left-radius: 5px; border-bottom-left-radius: 5px;" src="images/NEIGHBORHOOD place bell.jpg" alt="" /></center>
-											</li>
-											<li style="overflow:hidden; max-height: 250px; max-width: 325px; padding-left: 5px;">
-												<center><img style="max-height: 250px; width: auto border-top-right-radius: 5px; border-bottom-right-radius: 5px;" src="images/NEIGHBORHOOD salle andre mathieu.jpg" alt="" /></center>
-											</li>
-										</ul>
-									</div>
-								</section>
+								<hr>
 
+								<u><h2 style="padding-bottom: 15px;">Area map</h2></u>
 								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
 								<a href="http://ligne360.com" style="max-width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 20px; margin-top: 25px;" class="button fit special">www.ligne360.com</a>
 
