--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -104,7 +104,7 @@
 							<div class="displayBig2">
 								<section class="spotlight" style="background-color: #6fbee6">
 									<div class="image">
-										<img src="images/NEIGHBORHOOD salle andre mathieu.jpg" alt="" />
+										<img src="images/NEIGHBORHOOD place bell.jpg" alt="" />
 									</div>
 									<div class="content">
 										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
@@ -129,7 +129,37 @@
 									</div>
 								</section>
 							<div>
+						</section>
 
+						<section>
+							<div class="displaySmall2" style="display: none; overflow-x: hidden;">
+								<section style="background-color:  #4591c5">
+									<div style="padding: 30px 10px 40px 10px">
+										<h4 style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+									</div>
+									<div style="background-color: #87c45d;">
+										<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD place bell.jpg" alt="" /></center>
+									</div>
+								</section>
+			
+								<section style="background-color: #87c45d;">
+									<div style="padding: 40px 10px 40px 10px">
+										<h4 style="font-weight: 600;">Enjoy urban living with the tranquility of your own residential neighborhood.</h4>
+									</div>
+									<div style="background-color:#4591c5;">
+										<img style="width: 100%; height: auto;" src="images/NEIGHBORDHOOD metro.jpg" alt="" />
+									</div>
+								</section>
+
+								<section style="background-color:  #4591c5">
+									<div style="padding: 40px 10px 40px 10px">
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+									</div>
+									<div style="background-color: #FFF;">
+										<img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
+									</div>
+								</section>
+							<div>
 						</section>
 
 						<section class="wrapper style5">
@@ -173,7 +203,6 @@
 
 								<hr>
 
-								<u><h2 style="padding-bottom: 15px;">Area map</h2></u>
 								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
 								<a href="http://ligne360.com" style="max-width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 20px; margin-top: 25px;" class="button fit special">www.ligne360.com</a>
 
@@ -181,7 +210,7 @@
 						</section>
 
 						<div style="background-color: #FFF">
-							<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; height: auto;" src="images/ligne360.jpg">
+							<img class="map" style="display: block; margin-left: auto; margin-right: auto; width: 100%; height: auto;" src="images/ligne360.jpg">
 						</div>
 
 					</article>
