french starting transalting

--- a/floor4.html
+++ b/floor4.html
@@ -42,24 +42,24 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
-                    <div class="displayBig"><a href="index.html"><span>Français</span></a></div>
+                    <div class="displayBig"><a href="en-index.html"><span>English</span></a></div>
                 </li>
                 <li class="special">
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                     <div id="menu">
-                        <ul>
-                            <li><a href="en-index.html">Home</a></li>
-                            <li><a href="en-project.html">Project</a></li>
-                            <li><a href="en-neighborhood.html">Neighborhood</a></li>
-                            <li><a href="en-plans.html">Plans</a></li>
-                            <li><a href="en-builder.html">Builder</a></li>
-                            <li><a href="en-contact.html">Contact</a></li>
-                            <li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
-                        </ul>
+                            <ul>
+                                    <li><a href="index.html">Acceuil</a></li>
+                                    <li><a href="project.html">Caractéristiques</a></li>
+                                    <li><a href="neighborhood.html">Quartier</a></li>
+                                    <li><a href="plans.html">Plans</a></li>
+                                    <li><a href="builder.html">Constructeur</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                    <li class="displaySmall" style="display: none;"><a href="en-index.html"><span>English</span></a></li>
+                                </ul>
                     </div>
                 </li>
             </ul>
@@ -68,20 +68,20 @@
 
     <article id="main">
         <header style="background-attachment: scroll;">
-            <!-- <h2>Level 2</h2> -->
+            <!-- <h2>Level 4</h2> -->
         </header>
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
 
             <div class="displayBig">
                 <center>
-                    <img class="map" style="width: 835px; height: 645px;" src="plans/PLAN ETAGE 2-1.png" usemap="#image-map">
+                    <img class="map" style="width: 835px; height: 645px;" src="plans/PLAN ETAGE 4-1.png" usemap="#image-map">
 
                     <map name="image-map">
-                        <area target="_self" alt="Unit 201" title="Unit 201" href="en-unit201.html" coords="101,411,167,428,168,411,292,411,294,395,319,395,320,331,394,328,394,236,100,236" shape="poly">
-                        <area target="_self" alt="Unit 202" title="Unit 202" href="en-unit202.html" coords="101,61,101,233,394,236,395,60" shape="poly">
-                        <area target="_self" alt="Unit 203" title="Unit 203" href="en-unit203.html" coords="437,174,454,174,454,61,698,60,700,214,562,212,561,196,520,197,519,263,484,263,483,253,435,252,435,219,440,218" shape="poly">
-                        <area target="_self" alt="Unit 204" title="Unit 204" href="en-unit204.html" coords="699,391,623,391,622,370,541,369,540,327,506,326,506,320,433,317,433,286,436,286,436,253,484,253,484,263,518,264,519,197,561,197,562,214,700,215" shape="poly">
-                        <area target="_self" alt="Unit 205" title="Unit 205" href="en-unit205.html" coords="625,545,477,506,476,489,405,485,406,394,480,396,479,370,456,368,457,319,506,317,506,327,539,328,541,368,622,372,623,392,700,392,699,480,626,484" shape="poly">
+                        <area target="_self" alt="Unit 401" title="Unit 401" href="en-unit401.html" coords="98,412,167,431,165,413,291,415,293,397,318,396,318,333,391,330,392,239,97,238" shape="poly">
+                        <area target="_self" alt="Unit 402" title="Unit 402" href="en-unit402.html" coords="98,237,391,238,392,63,99,62" shape="poly">
+                        <area target="_self" alt="Unit 403" title="Unit 403" href="en-unit403.html" coords="452,64,697,64,696,216,559,216,559,196,517,195,517,259,481,259,480,254,435,254,435,177,452,175" shape="poly">
+                        <area target="_self" alt="Unit 404" title="Unit 404" href="en-unit404.html" coords="696,393,620,393,619,372,540,371,537,328,505,327,502,321,432,321,430,289,435,288,436,257,480,254,479,260,516,259,518,195,559,196,558,215,696,216" shape="poly">
+                        <area target="_self" alt="Unit 405" title="Unit 405" href="en-unit405.html" coords="624,547,474,508,473,490,400,489,401,399,479,398,478,371,458,370,456,332,453,331,453,322,504,319,504,327,538,329,538,372,618,371,620,393,697,392,696,481,623,484" shape="poly">
                     </map>
                 </center>
             </div>
@@ -92,19 +92,19 @@
                     <table style="max-width: 600px;">
                         <tbody>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit201.html">Unit 201</a></td>
+                                <td style="text-align: center;"><a href="en-unit401.html">Unit 401</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit202.html">Unit 202</a></td>
+                                <td style="text-align: center;"><a href="en-unit402.html">Unit 402</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit203.html">Unit 203</a></td>
+                                <td style="text-align: center;"><a href="en-unit403.html">Unit 403</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit204.html">Unit 204</a></td>
+                                <td style="text-align: center;"><a href="en-unit404.html">Unit 404</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit205.html">Unit 205</a></td>
+                                <td style="text-align: center;"><a href="en-unit405.html">Unit 405</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -119,7 +119,7 @@
         <ul class="copyright">
             <li>&copy; Condos Cité Avenir Laval</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            <li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+            <li><a href="contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
             <a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         </ul>
     </footer>
