--- a/en-unit304.html
+++ b/en-unit304.html
@@ -33,7 +33,7 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
@@ -43,7 +43,7 @@
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                     <div id="menu">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="en-index.html">Home</a></li>
                             <li><a href="en-project.html">Project</a></li>
                             <li><a href="en-neighborhood.html">Neighborhood</a></li>
                             <li><a href="en-plans.html">Plans</a></li>
