--- a/en-unit405.html
+++ b/en-unit405.html
@@ -37,13 +37,13 @@
         <nav id="nav">
             <ul>
                 <li>
-                    <div class="displayBig"><a href="index.html"><span>Français</span></a></div>
+                    <div class="displayBig"><a href="en-index.html"><span>Français</span></a></div>
                 </li>
                 <li class="special">
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                     <div id="menu">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="en-index.html">Home</a></li>
                             <li><a href="en-project.html">Project</a></li>
                             <li><a href="en-neighborhood.html">Neighborhood</a></li>
                             <li><a href="en-plans.html">Plans</a></li>
