--- a/floor3.html
+++ b/floor3.html
@@ -42,24 +42,24 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
-                    <div class="displayBig"><a href="index.html"><span>Français</span></a></div>
+                        <div class="displayBig"><a href="en-index.html"><span>English</span></a></div>
                 </li>
                 <li class="special">
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                     <div id="menu">
-                        <ul>
-                            <li><a href="en-index.html">Home</a></li>
-                            <li><a href="en-project.html">Project</a></li>
-                            <li><a href="en-neighborhood.html">Neighborhood</a></li>
-                            <li><a href="en-plans.html">Plans</a></li>
-                            <li><a href="en-builder.html">Builder</a></li>
-                            <li><a href="en-contact.html">Contact</a></li>
-                            <li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
-                        </ul>
+                            <ul>
+                                    <li><a href="index.html">Acceuil</a></li>
+                                    <li><a href="project.html">Caractéristiques</a></li>
+                                    <li><a href="neighborhood.html">Quartier</a></li>
+                                    <li><a href="plans.html">Plans</a></li>
+                                    <li><a href="builder.html">Constructeur</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                    <li class="displaySmall" style="display: none;"><a href="en-index.html"><span>English</span></a></li>
+                                </ul>
                     </div>
                 </li>
             </ul>
@@ -68,20 +68,20 @@
 
     <article id="main">
         <header style="background-attachment: scroll;">
-            <!-- <h2>Level 2</h2> -->
+            <!-- <h2>Level 3</h2> -->
         </header>
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
 
             <div class="displayBig">
                 <center>
-                    <img class="map" style="width: 835px; height: 645px;" src="plans/PLAN ETAGE 2-1.png" usemap="#image-map">
+                    <img class="map" style="width: 835px; height: 645px;" src="plans/PLAN ETAGE 3-1.png" usemap="#image-map">
 
                     <map name="image-map">
-                        <area target="_self" alt="Unit 201" title="Unit 201" href="en-unit201.html" coords="101,411,167,428,168,411,292,411,294,395,319,395,320,331,394,328,394,236,100,236" shape="poly">
-                        <area target="_self" alt="Unit 202" title="Unit 202" href="en-unit202.html" coords="101,61,101,233,394,236,395,60" shape="poly">
-                        <area target="_self" alt="Unit 203" title="Unit 203" href="en-unit203.html" coords="437,174,454,174,454,61,698,60,700,214,562,212,561,196,520,197,519,263,484,263,483,253,435,252,435,219,440,218" shape="poly">
-                        <area target="_self" alt="Unit 204" title="Unit 204" href="en-unit204.html" coords="699,391,623,391,622,370,541,369,540,327,506,326,506,320,433,317,433,286,436,286,436,253,484,253,484,263,518,264,519,197,561,197,562,214,700,215" shape="poly">
-                        <area target="_self" alt="Unit 205" title="Unit 205" href="en-unit205.html" coords="625,545,477,506,476,489,405,485,406,394,480,396,479,370,456,368,457,319,506,317,506,327,539,328,541,368,622,372,623,392,700,392,699,480,626,484" shape="poly">
+                        <area target="_self" alt="Unit 301" title="Unit 301" href="en-unit301.html" coords="102,413,169,431,170,414,294,416,296,397,322,398,322,332,395,332,397,238,102,238" shape="poly">
+                        <area target="_self" alt="Unit 302" title="Unit 302" href="en-unit302.html" coords="102,237,103,63,396,62,395,236" shape="poly">
+                        <area target="_self" alt="Unit 303" title="Unit 303" href="en-unit303.html" coords="456,62,457,176,438,176,439,255,485,255,485,266,521,266,522,200,564,200,565,214,701,217,701,64" shape="poly">
+                        <area target="_self" alt="Unit 304" title="Unit 304" href="en-unit304.html" coords="435,321,508,321,507,329,542,330,543,371,623,371,625,393,701,394,700,216,564,216,564,199,521,199,521,265,485,264,484,255,440,256,438,288,434,289" shape="poly">
+                        <area target="_self" alt="Unit 305" title="Unit 305" href="en-unit305.html" coords="406,489,478,490,480,509,627,547,628,485,700,484,700,394,624,392,622,372,543,371,540,330,508,329,507,322,457,321,457,370,482,371,481,397,408,398" shape="poly">
                     </map>
                 </center>
             </div>
@@ -92,19 +92,19 @@
                     <table style="max-width: 600px;">
                         <tbody>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit201.html">Unit 201</a></td>
+                                <td style="text-align: center;"><a href="en-unit301.html">Unit 301</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit202.html">Unit 202</a></td>
+                                <td style="text-align: center;"><a href="en-unit302.html">Unit 302</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit203.html">Unit 203</a></td>
+                                <td style="text-align: center;"><a href="en-unit303.html">Unit 303</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit204.html">Unit 204</a></td>
+                                <td style="text-align: center;"><a href="en-unit304.html">Unit 304</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-unit205.html">Unit 205</a></td>
+                                <td style="text-align: center;"><a href="en-unit305.html">Unit 305</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -119,7 +119,7 @@
         <ul class="copyright">
             <li>&copy; Condos Cité Avenir Laval</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            <li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+            <li><a href="contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
             <a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         </ul>
     </footer>
