--- a/plans.html
+++ b/plans.html
@@ -54,24 +54,24 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
-                    <div class="displayBig"><a href="index.html"><span>Français</span></a></div>
+                        <div class="displayBig"><a href="en-index.html"><span>English</span></a></div>
                 </li>
                 <li class="special">
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                     <div id="menu">
-                        <ul>
-                            <li><a href="en-index.html">Home</a></li>
-                            <li><a href="en-project.html">Project</a></li>
-                            <li><a href="en-neighborhood.html">Neighborhood</a></li>
-                            <li><a href="en-plans.html">Plans</a></li>
-                            <li><a href="en-builder.html">Builder</a></li>
-                            <li><a href="en-contact.html">Contact</a></li>
-                            <li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
-                        </ul>
+                            <ul>
+                                    <li><a href="index.html">Acceuil</a></li>
+                                    <li><a href="project.html">Caractéristiques</a></li>
+                                    <li><a href="neighborhood.html">Quartier</a></li>
+                                    <li><a href="plans.html">Plans</a></li>
+                                    <li><a href="builder.html">Constructeur</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                    <li class="displaySmall" style="display: none;"><a href="en-index.html"><span>English</span></a></li>
+                                </ul>
                     </div>
                 </li>
             </ul>
@@ -93,10 +93,10 @@
                     <img class="map" style="width: 835px; height: 540px;" src="images/banner.jpg" usemap="#image-map">
 
                     <map name="image-map">
-                        <area target="_self" alt="Floor 4" title="Floor 4" href="en-floor4.html" coords="114,285,253,241,332,249,332,253,416,266,447,259,522,271,537,265,583,273,598,268,706,280,707,218,597,207,584,211,584,187,619,192,623,179,556,160,547,161,533,159,525,161,526,176,539,172,584,186,584,210,538,200,522,206,446,190,416,199,332,182,332,177,250,167,113,229" shape="poly">
-                        <area target="_self" alt="Floor 3" title="Floor 3" href="en-floor3.html" coords="114,342,251,319,332,322,332,326,415,331,446,328,521,334,537,331,584,336,597,334,707,339,707,279,598,268,583,271,538,265,521,270,446,259,415,265,331,254,331,249,251,241,114,286" shape="poly">
-                        <area target="_self" alt="Floor 2" title="Floor 2" href="en-floor2.html" coords="114,397,251,398,334,394,415,397,446,395,582,399,598,397,707,396,707,340,596,334,583,336,538,330,521,334,446,328,416,331,332,327,332,324,251,319,113,341" shape="poly">
-                        <area target="_self" alt="Floor 1" title="Floor 1" href="en-floor1.html" coords="114,435,248,459,416,448,443,453,578,445,597,449,705,446,705,395,597,397,582,398,446,395,416,397,332,393,250,398,114,397" shape="poly">
+                        <area target="_self" alt="Floor 4" title="Floor 4" href="floor4.html" coords="114,285,253,241,332,249,332,253,416,266,447,259,522,271,537,265,583,273,598,268,706,280,707,218,597,207,584,211,584,187,619,192,623,179,556,160,547,161,533,159,525,161,526,176,539,172,584,186,584,210,538,200,522,206,446,190,416,199,332,182,332,177,250,167,113,229" shape="poly">
+                        <area target="_self" alt="Floor 3" title="Floor 3" href="floor3.html" coords="114,342,251,319,332,322,332,326,415,331,446,328,521,334,537,331,584,336,597,334,707,339,707,279,598,268,583,271,538,265,521,270,446,259,415,265,331,254,331,249,251,241,114,286" shape="poly">
+                        <area target="_self" alt="Floor 2" title="Floor 2" href="floor2.html" coords="114,397,251,398,334,394,415,397,446,395,582,399,598,397,707,396,707,340,596,334,583,336,538,330,521,334,446,328,416,331,332,327,332,324,251,319,113,341" shape="poly">
+                        <area target="_self" alt="Floor 1" title="Floor 1" href="floor1.html" coords="114,435,248,459,416,448,443,453,578,445,597,449,705,446,705,395,597,397,582,398,446,395,416,397,332,393,250,398,114,397" shape="poly">
                     </map>
                 </center>
             </div>
@@ -107,16 +107,16 @@
                     <table style="max-width: 600px;">
                         <tbody>
                             <tr>
-                                <td style="text-align: center;"><a href="en-floor1.html">Floor 1</a></td>
+                                <td style="text-align: center;"><a href="floor1.html">Floor 1</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-floor2.html">Floor 2</a></td>
+                                <td style="text-align: center;"><a href="floor2.html">Floor 2</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-floor3.html">Floor 3</a></td>
+                                <td style="text-align: center;"><a href="floor3.html">Floor 3</a></td>
                             </tr>
                             <tr>
-                                <td style="text-align: center;"><a href="en-floor4.html">Floor 4</a></td>
+                                <td style="text-align: center;"><a href="floor4.html">Floor 4</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -144,7 +144,7 @@
         <ul class="copyright">
             <li>&copy; Condos Cité Avenir Laval</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            <li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+            <li><a href="contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
             <a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         </ul>
     </footer>
